--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ nav li{
     grid-template-columns: minmax(0, 1fr);
     width: 70%;
     margin:auto;
+    grid-gap: 1em;
 }
 
 .professional-container img{
